--- a/templates/lab/index.html
+++ b/templates/lab/index.html
@@ -7,5 +7,11 @@
 </div>
 
 {% endblock content %}
-
+{% block extra_script %}
+<script>
+    $(document).ready(function(){
+        $("#loading-section").css('display', 'none')
+    })
+</script>
+{% endblock %}
 
